[gd_scene load_steps=12 format=2]

[ext_resource path="res://source/Button/Button.gd" type="Script" id=1]
[ext_resource path="res://assets/fonts/PressStart2P-Regular.ttf" type="DynamicFontData" id=2]

[sub_resource type="SpatialMaterial" id=2]
resource_local_to_scene = true
flags_unshaded = true
albedo_color = Color( 0, 0.176471, 1, 1 )

[sub_resource type="CylinderMesh" id=1]
resource_local_to_scene = true
material = SubResource( 2 )
top_radius = 0.8
bottom_radius = 0.8
height = 0.4
radial_segments = 16
rings = 0

[sub_resource type="SpatialMaterial" id=3]
resource_local_to_scene = true
flags_unshaded = true
albedo_color = Color( 0, 0, 1, 1 )

[sub_resource type="CylinderMesh" id=4]
resource_local_to_scene = true
material = SubResource( 3 )
height = 0.15
radial_segments = 16
rings = 0

[sub_resource type="BoxShape" id=5]
extents = Vector3( 1, 0.7, 1 )

[sub_resource type="Animation" id=7]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("MeshInstance:mesh:material:albedo_color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 0, 0.176471, 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("MeshInstance2:mesh:material:albedo_color")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 0, 0, 1, 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("MeshInstance:translation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector3( 0, 0.3, 0 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("MeshInstance:scale")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector3( 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=6]
resource_name = "press"
tracks/0/type = "value"
tracks/0/path = NodePath("MeshInstance:mesh:material:albedo_color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 0.6, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 0, 0.176471, 1, 1 ), Color( 0, 0.176471, 1, 1 ), Color( 1, 0.145098, 0.137255, 1 ), Color( 1, 0.145098, 0.137255, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("MeshInstance2:mesh:material:albedo_color")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5, 0.6, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 1, 1 ), Color( 0, 0, 1, 1 ), Color( 1, 0.0470588, 0, 1 ), Color( 1, 0.0470588, 0, 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("MeshInstance:translation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector3( 0, 0.3, 0 ), Vector3( 0, 0.15, 0 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("MeshInstance:scale")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector3( 1, 1, 1 ), Vector3( 1, 0.5, 1 ) ]
}

[sub_resource type="BoxShape" id=8]
extents = Vector3( 1, 0.375, 1 )

[sub_resource type="DynamicFont" id=9]
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 2 )

[node name="Button" type="Spatial"]
script = ExtResource( 1 )

[node name="MeshInstance" type="MeshInstance" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.3, 0 )
mesh = SubResource( 1 )

[node name="MeshInstance2" type="MeshInstance" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.075, 0 )
mesh = SubResource( 4 )

[node name="Area" type="Area" parent="."]

[node name="CollisionShape" type="CollisionShape" parent="Area"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.7, 0 )
shape = SubResource( 5 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
playback_speed = 7.0
anims/RESET = SubResource( 7 )
anims/press = SubResource( 6 )

[node name="StaticBody" type="StaticBody" parent="."]

[node name="CollisionShape" type="CollisionShape" parent="StaticBody"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.275, 0 )
shape = SubResource( 8 )
disabled = true

[node name="WaitTimer" type="Timer" parent="."]
one_shot = true

[node name="Label" type="Label" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = SubResource( 9 )
align = 1
valign = 1

[node name="TextTimer" type="Timer" parent="."]
wait_time = 2.5
one_shot = true

[connection signal="body_entered" from="Area" to="." method="_on_Area_body_entered"]
[connection signal="body_exited" from="Area" to="." method="_on_Area_body_exited"]
